fixed spot-text-alignment and took out password must match logic for signup

--- a/frontend/src/components/Spots/Spots.css
+++ b/frontend/src/components/Spots/Spots.css
@@ -16,7 +16,7 @@
 
 .spot-container {
   padding-bottom: 10px;
-  padding-right: 10px;
+  padding-right: 24px;
 }
 
 .spot-images {
